--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -18,6 +18,9 @@ $(document).ready(function() {
 </head>
 <body>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0&appId=1351035148316092&autoLogAppEvents=1" nonce="NV0JiJ8P"></script>
+
 <div id="container">
 
   <%= render 'layouts/header' %>
