updated carousel URLs

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -31,7 +31,7 @@ $(document).ready(function() {
     <div class="flexslider">
       <ul class="slides">
         <li>
-          <img src="http://192.168.88.117:3000/assets/fly_teaser.jpg" alt=""> <!-- 1912 x 741 -->
+          <img src="/assets/fly_teaser.jpg" alt=""> <!-- 1912 x 741 -->
           <div class="flex-caption">
             <div class="flex-caption_inner">
               <div class="txt1"><strong>FLY THE DEVIL DOG</strong></div>
@@ -41,7 +41,7 @@ $(document).ready(function() {
           </div>
         </li>
         <li>
-          <img src="http://192.168.88.117:3000//assets/slider_vintage.jpg" alt=""> <!-- 1913 x 741 -->
+          <img src="/assets/slider_vintage.jpg" alt=""> <!-- 1913 x 741 -->
           <div class="flex-caption">
             <div class="flex-caption_inner">
               <div class="txt1"><strong>Giving History a Future</strong></div>
@@ -52,7 +52,7 @@ $(document).ready(function() {
         </li>
 
         <li>
-          <img src="http://192.168.88.117:3000//assets/slider_maintenance.jpg" alt=""> <!-- 1912 x 741 -->
+          <img src="/assets/slider_maintenance.jpg" alt=""> <!-- 1912 x 741 -->
           <div class="flex-caption">
             <div class="flex-caption_inner">
               <div class="txt1"><strong>Maintenance</strong></div>
