updates to events show, formatting

--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -4,8 +4,19 @@
 <%= markdown @content.body %>
 
 <% if signed_in?%>
-    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
-<%= link_to 'Edit', edit_content_path(@content) %> |
-<%= link_to 'Back', contents_path %>
-<% end %>
+  <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
+    <div class="admin-section" >
+<div class='row'>
+  <div class='col-sm-6'>
+      <h2>Admin</h2>
+        <%= button_to 'Edit Content', edit_content_path(@content), method: :get, :class => "btn-default btn" %>
+  </div>
+  <div class='col-sm-6 google-search-result'>
+
+  </div>
+</div>    
+        <%#= render '/contents/versions', :contents => @contents %>
+    </div>
+
+  <% end %>
 <% end %>
