--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -210,6 +210,42 @@ input:focus, select:focus, textarea:focus /*, input[type=submit]:hover */ {
   padding: 0.1em 0.5em;
 }
 
+.boxsizingBorder {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+
+/* =Table Elements
+-------------------------------------------------------------- */
+
+table {
+  background: #fff;
+  border: 1px solid #999;
+  border-collapse: collapse;
+}
+
+table tr:nth-child(2n+1) {
+  background: #fdf9ef;
+}
+
+th {
+  background: #666666;
+  color: #ffffff;
+  padding: 3px;
+  vertical-align: top;
+}
+
+th.sortable {
+  cursor: pointer;
+}
+
+td {
+  border: 1px solid #e0debc;
+  padding: 0.4em;
+}
+
 /* =calendar items
 -------------------------------------------------------------- */
 
@@ -403,6 +439,14 @@ cursor: default;
 background: #ffff;
 background: rgba(255, 255, 255, 0.9);
 cursor: default;
+}
+
+
+.admin-section {
+  margin: 2em 0;
+  padding: 0.5em 1em;
+  background: #EBF2E9;
+  border: 1px solid #75946C;
 }
 
 /* =Full Size
