added google tag

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -7,6 +7,16 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E2JPP02LBK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E2JPP02LBK');
+</script>
+
 <script type="text/javascript">
 $(document).ready(function() {
   $('.flexslider').flexslider({
