--- a/app/assets/stylesheets/screen/flexslider.css
+++ b/app/assets/stylesheets/screen/flexslider.css
@@ -1,10 +1,10 @@
 /*
  * jQuery FlexSlider v2.7.2
- * https://www.woocommerce.com/flexslider/
+ * https:/www.woocommerce.com/flexslider/
  *
  * Copyright 2012 WooThemes
  * Free to use under the GPLv2 and later license.
- * http://www.gnu.org/licenses/gpl-2.0.html
+ * http:/www.gnu.org/licenses/gpl-2.0.html
  *
  * Contributing author: Tyler Smith (@mbmufffin)
  *
@@ -14,8 +14,8 @@
  * ====================================================================================================================*/
 @font-face {
   font-family: 'flexslider-icon';
-  src: url('../assets//flexslider-icon.eot');
-  src: url('../assets//flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../assets//flexslider-icon.woff') format('woff'), url('../assets//flexslider-icon.ttf') format('truetype'), url('../assets//flexslider-icon.svg#flexslider-icon') format('svg');
+  src: url('../assets/flexslider-icon.eot');
+  src: url('../assets/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../assets/flexslider-icon.woff') format('woff'), url('../assets/flexslider-icon.ttf') format('truetype'), url('../assets/flexslider-icon.svg#flexslider-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
