--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
   <li><a href="https://twitter.com/NationalCente11" ><i class="fa icon-twitter-sign"></i></a></li>
 </ul>
 <br />
-<%= link_to (image_tag "devildog_logo.png", :class => "header_logo", :style => "width: 160px;"), root_path %>
+<%= link_to (image_tag "devildog_logo.png", :class => "header_logo"), root_path %>
 
 </header>
 
