--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -176,6 +176,10 @@ footer p {
   margin: 0 auto;
   }
 
+footer p a {
+  color: #ffd800;
+  }
+  
 /* =Input Elements
 -------------------------------------------------------------- */
 
