--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -33,7 +33,7 @@ body {
   background: #1d2644;
 }
 h1, h2, h3, h4, h5, h6 {
-  clear: both;
+  /*clear: both;*/
   font-weight: normal;
 }
 ol, ul {
@@ -315,13 +315,13 @@ td {
   }
 
 .calendar_row {
-  margin: 0 10px 10px 20px;
+  margin: 1em 0 2em;
   padding: 1em;
   border: 1px solid #ccc;
   border-bottom: none;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 4px 4px 0px 0px;
   -moz-border-radius: 0px;
-  -webkit-border-radius: 5px 5px 0px 0px;
+  -webkit-border-radius: 4px 4px 0px 0px;
     }
 
 .calendar {
@@ -387,8 +387,9 @@ td {
     color: #fff;
     font-style: italic;
     font-weight: bold;
+        text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
     border: 2px solid #fff;
-    border-radius: 5px;
+    border-radius: 4px;
     -webkit-box-shadow: 0px 0px 0px 3px #009140;
     -moz-box-shadow: 0px 0px 0px 3px #009140;
     box-shadow: 0px 0px 0px 3px #009140;
@@ -400,6 +401,17 @@ td {
   font-style: italic;
 }
 
+.month-subheader {
+    font-size: 1.5em;
+    color: #fff;
+    text-align: center;
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+    margin: 1em auto;
+    padding: 0.75em 0;
+    background: #52782a;
+    border: 1px solid #666;
+    border-radius: 4px;
+}
 
 /* =homepage divs
 -------------------------------------------------------------- */
@@ -410,7 +422,7 @@ td {
 
 .hp-about {
   background: url('/uploads/images/devildog_logo_big.png') center center no-repeat #cadbeb;
-  background-size: 300px;
+  background-size: 500px;
   }
 
 .hp-donations {
@@ -418,9 +430,15 @@ td {
   }
 
 .fl {
-    float: right;
-    margin-left: 10px;
-    padding: 9px 9px 0px 0px;
+
+    padding: 9px 0px;
+    max-width: 320px;
+}
+
+.fb_iframe_widget {
+    width: 555px;
+    margin: 0 auto;
+    display: block !important;
 }
 
 /* =Sponsors
@@ -446,7 +464,7 @@ td {
 .flex-caption {
   position: relative;
   top: -120px;
-    height: 0px;
+  height: 0px;
   }
 
 .flex-caption_inner {
@@ -494,6 +512,7 @@ cursor: default;
   padding: 0.5em;
   border: 3px solid #009140;
   border-radius: 5px;
+  margin: .67em 0;
 }
 
 .dues_not_current {
@@ -503,7 +522,36 @@ cursor: default;
   padding: 0.5em;
   border: 3px solid #cc0000;
   border-radius: 5px;
+  margin: .67em 0;
 }
+
+.dog-bowl {
+  max-width: 320px;
+  margin: 1em auto;
+}
+
+.article-image img {
+  width: 100%;
+  border: 1px solid #666;
+}
+
+.caption, .attribution {
+  font-size: 0.9em;
+  margin: 0.5em 0.25em;
+  text-align: center;
+}
+
+.attribution {
+  font-size: 0.7em;
+  font-style: italic;
+}
+
+.pull-right, .pull-left {
+  border: 1px solid #ddd;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
 
 /* =Full Size
 -------------------------------------------------------------- */
@@ -552,6 +600,10 @@ cursor: default;
   padding: 2em 4em 4em;
   }
 
+.hp-about {
+  background-size: 800px;
+  }
+
 article, .hp-copy {
   max-width: 1000px;
   margin: 0 auto;
@@ -561,6 +613,29 @@ article, .hp-copy {
   width: 8em;
   height:8em;
   }
+
+.fl {
+    float: right;
+    margin-left: 10px;
+    padding: 9px 9px 0px 0px;
+    max-width: 400px;
+}
+
+/* =Random Elements
+-------------------------------------------------------------- */
+
+.dog-bowl {
+  max-width: 400px;
+  margin: 1em auto;
+}
+
+.pull-right {
+  margin: 0 0 1em 1em;
+}
+
+.pull-left {
+  margin: 0 1em 1em 0;
+}
 
 }
 
