--- a/app/views/pages/_hp_calendar.html.erb
+++ b/app/views/pages/_hp_calendar.html.erb
@@ -6,7 +6,7 @@
 <% @events.each do |event| %>
 <div class="calendar_row">
 <div class='row'>
-<div class="col-xs-12 col-sm-4">
+<div class="col-xs-12 col-sm-6 col-md-4">
 <div class='row'>
   <% if event.start.strftime("%b %d" ) == event.end.strftime("%b %d") %>
 <div class="col-xs-12">
@@ -67,7 +67,7 @@
 </div>
 </div>
 
-  <div class="col-xs-12 col-sm-8">
+  <div class="col-xs-12 col-sm-6 col-md-8">
     <h3 class="event-title"><em><strong><%= link_to event.title, event %></strong></em></h3>
     <% if event.event_statuses_id == 2 %>
       <span class="event-flag" style="display: inline;"> &lt;= Tentative</span>
