--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -81,9 +81,9 @@ $(document).ready(function() {
           <img src="/assets/slider_maintenance.jpg" alt=""> <!-- 1912 x 741 -->
           <div class="flex-caption">
             <div class="flex-caption_inner">
-              <div class="txt1"><strong>Maintenance</strong></div>
+              <div class="txt1"><strong>Volunteers</strong></div>
               <div class="txt2">What's it take to make a Dog fly?</div>
-              <div class="txt3"><a href="#" class="btn btn-primary">Maintenance</a></div>
+              <div class="txt3"><a href="/squadron" class="btn btn-primary">Squadron Info</a></div>
             </div>
           </div>
         </li>
