updates to events form

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -551,6 +551,10 @@ cursor: default;
   padding: 1em;
   margin-bottom: 1em;
 }
+.form_note {
+  font-size: 0.75em;
+  color: #aaa;
+}
 
 
 /* =Full Size
