fixed filter on events

--- a/app/views/events/_scripts.html.erb
+++ b/app/views/events/_scripts.html.erb
@@ -6,7 +6,7 @@ $(document).ready(function(){
         var filter = $(this).val(), count = 0;
  
         // Loop through the comment list
-        $(".blocchi-parent").each(function(){
+        $(".calendar_row").each(function(){
  
             // If the list item does not contain the text phrase fade it out
             if ($(this).text().search(new RegExp(filter, "i")) < 0) {
