--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,16 +1,3 @@
-<% content_for :sidebar do %>
-
-  <% map_url = "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@location.latitude+","+@location.longitude+"&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
-
-  <p><strong><%= @location.short_name %> - <%= @location.city %>, <%= @location.state %></strong></p>
-
-  <% if @location.latitude? %>
-    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;">
-      <img src="<%= map_url %>" />
-    </div>
-  <% end %>
-<% end %>
-
 <h1>Location Detail</h1>
 
 <p>
@@ -58,5 +45,32 @@
   <%= @location.one_way_distance %>
 </p>
 
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %>
+<% map_url = "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@location.latitude+","+@location.longitude+"&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
+
+<p><strong><%= @location.short_name %> - <%= @location.city %>, <%= @location.state %></strong></p>
+
+<% if @location.latitude? %>
+  <div style="border: 1px solid #ccc; margin: 1em 0 1em 1em;">
+    <img src="<%= map_url %>" />
+  </div>
+<% end %>
+
+<% if signed_in?%>
+  <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
+    <div class="admin-section" >
+<div class='row'>
+  <div class='col-sm-12'>
+      <h2>Admin</h2>
+      <p>You are seeing this admin area because you are logged in with admin privileges.</p>
+      <div class='row'>
+        <div class="col-xs-12 col-sm-2">
+        <%= button_to 'Edit', edit_location_path(@location), method: :get, :class => "btn-default btn" %>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+        <%= button_to 'Back', locations_path, method: :get, :class => "btn-default btn" %>
+  </div>
+  </div>
+  </div>
+  </div>
+</div> 
+<% end %><% end %>
